first chapter in course

--- a/MyProject/Config/DefaultEngine.ini
+++ b/MyProject/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/Minimal_Default_kai.Minimal_Default_kai
+EditorStartupMap=/Game/Maps/Minimal_Default_kai.Minimal_Default_kai
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
